// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with 0 expenses 1`] = `
<div>
  <h3>
    Viewing 
    0
     
     expenses 
     totalling 
    $0.00
  </h3>
</div>
`;

exports[`should render correctly with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    2
     
     expenses 
     totalling 
    $9.99
  </h3>
</div>
`;
